--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <div class="login__nav">
+      <div class="login__nav -fix">
         <ul>
           <li><a href="">プライバシー</a></li>
           <li><a href="">利用規約</a></li>
