--- a/single-function.html
+++ b/single-function.html
@@ -23,9 +23,9 @@
                 単体機能サービス
               </div>
               <div class="d-none d-lg-block">
-                <hr>
+                <hr class="my-3">
                 <p class="-text">単体機能ではなくパッケージを利用されたいですか？</p>
-                <hr>
+                <hr class="my-3">
                 <p><a href="#"><i class="icon-angle-right-circle"></i> <strong>単体機能サービスはこちら</strong></a></p>
               </div>
             </div>
@@ -45,16 +45,16 @@
           </div>
           <div class="col-12 d-lg-none">
               <div class="singlefc__box text-center">
-                <hr>
+                <hr class="my-3">
                 <p class="-text">単体機能ではなくパッケージを利用されたいですか？</p>
-                <hr>
+                <hr class="my-3">
                 <p><a href="#"><i class="icon-angle-right-circle"></i> <strong>単体機能サービスはこちら</strong></a></p>
               </div>
           </div>
         </div>
       </div>
 
-      <div class="login__nav -singlefc">
+      <div class="login__nav -fix -singlefc">
         <ul>
           <li><a href="">プライバシー</a></li>
           <li><a href="">利用規約</a></li>
