--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="login__nav -fix">
-        <ul>
+        <ul class="justify-content-center">
           <li><a href="">プライバシー</a></li>
           <li><a href="">利用規約</a></li>
           <li><a href="">問合せ</a></li>
