--- a/single-function.html
+++ b/single-function.html
@@ -26,7 +26,7 @@
                 <hr class="my-3">
                 <p class="-text">単体機能ではなくパッケージを利用されたいですか？</p>
                 <hr class="my-3">
-                <p><a href="#"><i class="icon-angle-right-circle"></i> <strong>単体機能サービスはこちら</strong></a></p>
+                <p><a href="#"><i class="icon-angle-right-circle"></i> <strong>パッケージサービスはこちら</strong></a></p>
               </div>
             </div>
           </div>
@@ -48,14 +48,14 @@
                 <hr class="my-3">
                 <p class="-text">単体機能ではなくパッケージを利用されたいですか？</p>
                 <hr class="my-3">
-                <p><a href="#"><i class="icon-angle-right-circle"></i> <strong>単体機能サービスはこちら</strong></a></p>
+                <p><a href="#"><i class="icon-angle-right-circle"></i> <strong>パッケージサービスはこちら</strong></a></p>
               </div>
           </div>
         </div>
       </div>
 
       <div class="login__nav -fix -singlefc">
-        <ul>
+        <ul class="justify-content-center">
           <li><a href="">プライバシー</a></li>
           <li><a href="">利用規約</a></li>
           <li><a href="">問合せ</a></li>
