--- a/user-info.html
+++ b/user-info.html
@@ -158,7 +158,7 @@
                       <table id="table_userinfo" class="table">
                         <thead>
                           <tr>
-                            <th>日付</th>
+                            <th><div class="d-flex align-items-center">日付</div></th>
                             <th class="no-sort">項目</th>
                             <th class="no-sort text-end">金額</th>
                           </tr>
