--- a/bukken.html
+++ b/bukken.html
@@ -84,13 +84,18 @@
 
           <div class="sc__box -list mb-4">
             <div class="sc__box__header -small d-flex align-items-center">
-              <h4 class="sc__box__title d-flex align-items-center"><i class="icon-appraisal"></i>最新登録物件</h4>
+              <h4 class="sc__box__title d-flex align-items-center"><i class="icon-appraisal"></i>登録物件一覧</h4>
             </div>
             <div class="table-wrapper">
                 <table class="table table-striped table_list -fixedHeader">
                   <thead class="align-middle">
                     <tr>
-                      <th class="no-sort"><input class="form-check-input" type="checkbox" value=""></th>
+                      <th class="no-sort">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
+                      </th>
                       <th><div class="d-flex align-items-center">管理番号</div></th>
                       <th><div class="d-flex align-items-center">業務区分</div></th>
                       <th><div class="d-flex align-items-center">対象区分</div></th>
@@ -104,7 +109,10 @@
                   <tbody>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000012</td>
                       <td>マンション</td>
@@ -117,7 +125,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000011</td>
                       <td>造成事例</td>
@@ -130,7 +141,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000010</td>
                       <td>賃貸事例</td>
@@ -143,7 +157,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000009</td>
                       <td>取引事例</td>
@@ -156,7 +173,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000008</td>
                       <td>競売</td>
@@ -169,7 +189,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000007</td>
                       <td>意見書</td>
@@ -182,7 +205,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000006</td>
                       <td>調査報告書</td>
@@ -195,7 +221,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000005</td>
                       <td>一般鑑定</td>
@@ -208,7 +237,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000004</td>
                       <td>固定資産税</td>
@@ -221,7 +253,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000003</td>
                       <td>相続税</td>
@@ -234,7 +269,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000002</td>
                       <td>地価調査</td>
@@ -247,7 +285,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <input class="form-check-input" type="checkbox" value="">
+                        <label class="checkbox__fake me-2">
+                          <input type="checkbox">
+                          <span class="checkmark"></span>
+                        </label>
                       </td>
                       <td>0000001</td>
                       <td>地価公示</td>
