--- a/user-info.html
+++ b/user-info.html
@@ -154,8 +154,8 @@
                       </div>
                     </li>
                     <li>
-                      <p class="el__label mt-4 mb-4">支払履歴</p>
-                      <table id="table_userinfo" class="table">
+                      <p class="el__label mt-4 mb-4 pb-2">支払履歴</p>
+                      <table id="table_userinfo" class="table pt-1">
                         <thead>
                           <tr>
                             <th><div class="d-flex align-items-center">日付</div></th>
