--- a/bukken-input.html
+++ b/bukken-input.html
@@ -315,100 +315,98 @@
                             </div>
                           </div>
                           <div class="col-md-6">
-                            <table class="table -st3  mb-4">
-                              <thead>
-                                <tr>
-                                  <th>接面道路区分①</th>
-                                  <th>前面道路 <i class="icon-arrow-up"></i></th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr>
-                                  <td>方位</td>
-                                  <td>南</td>
-                                </tr>
-                                <tr>
-                                  <td>種類</td>
-                                  <td>国道</td>
-                                </tr>
-                                <tr>
-                                  <td>名称</td>
-                                  <td>—</td>
-                                </tr>
-                                <tr>
-                                  <td>建築基準法上の区分</td>
-                                  <td>第42条1項1号</td>
-                                </tr>
-                                <tr>
-                                  <td>道路幅員</td>
-                                  <td>36.0㎡</td>
-                                </tr>
-                                <tr>
-                                  <td>セットバック</td>
-                                  <td>不要</td>
-                                </tr>
-                                <tr>
-                                  <td>歩道</td>
-                                  <td>有</td>
-                                </tr>
-                                <tr>
-                                  <td>舗装の種類</td>
-                                  <td>アスファルト</td>
-                                </tr>
-                                <tr>
-                                  <td>舗装の状態</td>
-                                  <td>優</td>
-                                </tr>
-                              </tbody>
-                            </table>
+                            <div class="box__toggle  mb-4">
+                              <div class="box__toggle__header d-flex">
+                                <div>接面道路区分①</div>
+                                <div class="ms-auto">前面道路 <i class="icon-arrow-up d-inline-block"></i></div>
+                              </div>
+                              <ul class="box__toggle__content">
+                                <li class="d-flex">
+                                  <div>方位</div>
+                                  <div class="ms-auto text-end">南</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>種類</div>
+                                  <div class="ms-auto text-end">国道</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>名称</div>
+                                  <div class="ms-auto text-end">—</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>建築基準法上の区分</div>
+                                  <div class="ms-auto text-end">第42条1項1号</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>道路幅員</div>
+                                  <div class="ms-auto text-end">36.0㎡</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>セットバック</div>
+                                  <div class="ms-auto text-end">不要</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>歩道</div>
+                                  <div class="ms-auto text-end">有</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>舗装の種類</div>
+                                  <div class="ms-auto text-end">アスファルト</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>舗装の状態</div>
+                                  <div class="ms-auto text-end">優</div>
+                                </li>
+                              </ul>
+                            </div> <!-- .box__toggle -->
+
                           </div>
                           <div class="col-md-6">
-                            <table class="table -st3 mb-4">
-                              <thead>
-                                <tr>
-                                  <th>接面道路区分②</th>
-                                  <th>背面道路 <i class="icon-arrow-up"></i></th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr>
-                                  <td>方位</td>
-                                  <td>北</td>
-                                </tr>
-                                <tr>
-                                  <td>種類</td>
-                                  <td>市道</td>
-                                </tr>
-                                <tr>
-                                  <td>名称</td>
-                                  <td>上町14号線</td>
-                                </tr>
-                                <tr>
-                                  <td>建築基準法上の区分</td>
-                                  <td>道路にあらず</td>
-                                </tr>
-                                <tr>
-                                  <td>道路幅員</td>
-                                  <td>4,50㎡</td>
-                                </tr>
-                                <tr>
-                                  <td>セットバック</td>
-                                  <td>不要</td>
-                                </tr>
-                                <tr>
-                                  <td>歩道</td>
-                                  <td>無</td>
-                                </tr>
-                                <tr>
-                                  <td>舗装の種類</td>
-                                  <td>アスファルト</td>
-                                </tr>
-                                <tr>
-                                  <td>舗装の状態</td>
-                                  <td>普通</td>
-                                </tr>
-                              </tbody>
-                            </table>
+                            <div class="box__toggle  mb-4">
+                              <div class="box__toggle__header d-flex">
+                                <div>接面道路区分②</div>
+                                <div class="ms-auto">背面道路 <i class="icon-arrow-up d-inline-block"></i></div>
+                              </div>
+                              <ul class="box__toggle__content">
+                                <li class="d-flex">
+                                  <div>方位</div>
+                                  <div class="ms-auto text-end">北</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>種類</div>
+                                  <div class="ms-auto text-end">市道</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>名称</div>
+                                  <div class="ms-auto text-end">上町14号線</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>建築基準法上の区分</div>
+                                  <div class="ms-auto text-end">道路にあらず</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>道路幅員</div>
+                                  <div class="ms-auto text-end">4,50㎡</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>セットバック</div>
+                                  <div class="ms-auto text-end">不要</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>歩道</div>
+                                  <div class="ms-auto text-end">無</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>舗装の種類</div>
+                                  <div class="ms-auto text-end">アスファルト</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>舗装の状態</div>
+                                  <div class="ms-auto text-end">普通</div>
+                                </li>
+                              </ul>
+
+                            </div> <!-- .box__toggle -->
                           </div>
                         </div>
                       </div>
@@ -420,76 +418,75 @@
                         <button class="btn -s2 me-4 mb-4"><i class="icon-judgment"></i> 判定／測定する</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6">
-                            <table class="table -st3  mb-4">
-                              <thead>
-                                <tr>
-                                  <th>交通／接近条件①</th>
-                                  <th>駅 <i class="icon-arrow-up"></i></th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr>
-                                  <td>路線名</td>
-                                  <td>JR土讃線</td>
-                                </tr>
-                                <tr>
-                                  <td>最寄駅</td>
-                                  <td>旭駅</td>
-                                </tr>
-                                <tr>
-                                  <td>直線距離</td>
-                                  <td>772m</td>
-                                </tr>
-                                <tr>
-                                  <td>交通手段</td>
-                                  <td>自動車（最短距離探索）</td>
-                                </tr>
-                                <tr>
-                                  <td>道のり距離</td>
-                                  <td>1.0km</td>
-                                </tr>
-                                <tr>
-                                  <td>所要時間</td>
-                                  <td>3分</td>
-                                </tr>
-                              </tbody>
-                            </table>
+
+                            <div class="box__toggle  mb-4">
+                              <div class="box__toggle__header d-flex">
+                                <div>交通／接近条件①</div>
+                                <div class="ms-auto">駅 <i class="icon-arrow-up d-inline-block"></i></div>
+                              </div>
+                              <ul class="box__toggle__content">
+                                <li class="d-flex">
+                                  <div>路線名</div>
+                                  <div class="ms-auto text-end">JR土讃線</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>最寄駅</div>
+                                  <div class="ms-auto text-end">旭駅</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>直線距離</div>
+                                  <div class="ms-auto text-end">772m</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>交通手段</div>
+                                  <div class="ms-auto text-end">自動車（最短距離探索）</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>道のり距離</div>
+                                  <div class="ms-auto text-end">1.0km</div>
+                                </li>
+                                <li class="d-flex">
+                                  <div>所要時間</div>
+                                  <div class="ms-auto text-end">3分</div>
+                                </li>
+                              </ul>
+                            </div> <!-- .box__toggle -->
+
                           </div>
                           <div class="col-md-6">
-                            <table class="table -st3  mb-4">
-                              <thead>
-                                <tr>
-                                  <th>交通／接近条件②</th>
-                                  <th>バス停 <i class="icon-arrow-up"></i></th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr>
+                            <div class="box__toggle  mb-4">
+                              <div class="box__toggle__header d-flex">
+                                <div>交通／接近条件②</div>
+                                <div class="ms-auto">バス停 <i class="icon-arrow-up d-inline-block"></i></div>
+                              </div>
+                              <ul class="box__toggle__content">
+                                <li class="d-flex">
                                   <td>路線名</td>
-                                  <td>高岡線</td>
-                                </tr>
-                                <tr>
+                                  <td class="ms-auto text-end">高岡線</td>
+                                </li>
+                                <li class="d-flex">
                                   <td>最寄駅</td>
-                                  <td>上町五丁目</td>
-                                </tr>
-                                <tr>
+                                  <t class="ms-auto text-end"d>上町五丁目</td>
+                                </li>
+                                <li class="d-flex">
                                   <td>直線距離</td>
-                                  <td>95m</td>
-                                </tr>
-                                <tr>
+                                  <td class="ms-auto text-end">95m</td>
+                                </li>
+                                <li class="d-flex">
                                   <td>交通手段</td>
-                                  <td>徒歩</td>
-                                </tr>
-                                <tr>
+                                  <t class="ms-auto text-end"d>徒歩</td>
+                                </li>
+                                <li class="d-flex">
                                   <td>道のり距離</td>
-                                  <td>94m</td>
-                                </tr>
-                                <tr>
+                                  <td class="ms-auto text-end">94m</td>
+                                </li>
+                                <li class="d-flex">
                                   <td>所要時間</td>
-                                  <td>1分</td>
-                                </tr>
-                              </tbody>
-                            </table>
+                                  <t class="ms-auto text-end"d>1分</td>
+                                </li>
+                              </ul>
+                            </div> <!-- .box__toggle -->
+
                           </div>
                         </div>
                       </div>
