--- a/bukken.html
+++ b/bukken.html
@@ -87,11 +87,11 @@
               <h4 class="sc__box__title d-flex align-items-center"><i class="icon-appraisal"></i>登録物件一覧</h4>
             </div>
             <div class="table-wrapper">
-                <table class="table table-striped table_list -fixedHeader">
+                <table class="table table-striped table_list -fixedHeader js-table-edit">
                   <thead class="align-middle">
                     <tr>
                       <th class="no-sort">
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake js-checkbox-all">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -104,12 +104,13 @@
                       <th class="no-sort"></th>
                       <th><div class="d-flex align-items-center">地番</div></th>
                       <th><div class="d-flex align-items-center">地積</div></th>
+                      <th class="d-none d-sm-table-cell"></th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -122,10 +123,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -138,10 +150,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -154,10 +177,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -170,10 +204,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -186,10 +231,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -202,10 +258,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -218,10 +285,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -234,10 +312,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -250,10 +339,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -266,10 +366,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -282,10 +393,21 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>
-                        <label class="checkbox__fake me-2">
+                        <label class="checkbox__fake">
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
@@ -298,6 +420,17 @@
                       <td>高知市福井町</td>
                       <td>1611-1</td>
                       <td>100㎡</td>
+                      <td class="d-none d-sm-table-cell">
+                        <div class="dropdown table__actiion">
+                          <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-dots"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                          </ul>
+                        </div>
+                      </td>
                     </tr>
                   </tbody>
                 </table>
@@ -328,6 +461,17 @@
           </div>
 
         </div> <!-- .sc__content -->
+      </div>
+
+      <div class="mb__bukkenfix -table-edit d-lg-none js-table-action-mb">
+        <ul class="row gx-0">
+          <li class="col-6 border-end">
+            <a href=""><i class="icon-edit"></i> 編集</a>
+          </li>
+          <li class="col-6">
+            <a href=""><i class="icon-trash"></i> 削除</a>
+          </li>
+        </ul>
       </div>
 
       <div class="nav__mobile">
